# apifiny

./: .env.sample  Cargo.toml  Readme.md
examples/: apifiny.rs
src/: config.rs  constants.rs  err.rs  lib.rs  rest_client.rs  token.rs  utils.rs
